# Scry

./: .clang-format  .clang-tidy  .gitignore  CmakeLists.txt  LICENSE  README.md  Scry.code-workspace  project.json
assets/cooked/: suzanne.scrymesh
assets/objects/: _Box_1x1.fbx
assets/raw/shaders/: cs_indirect.sc  cull.hlsl  debug_line.hlsl  fs_mesh.sc  mesh.hlsl  varying.def.sc  vs_mesh.sc
cmake/: EngineHelpers.cmake  ScryConfig.cmake.in  ScryHelpers.cmake
docs/: ARCHITECTURE.md
editor/: CMakeLists.txt  LICENSE_NOTICE.txt
editor/src/: editor_renderer_bridge.cpp  editor_renderer_bridge.hpp  glfw_impl.cpp  main.cpp
editor/ui/: editor_window.slint
examples/: CMakeLists.txt  main.cpp  scry_project.json
examples/sandbox/: CMakeLists.txt  main.c  main.cpp  project.json
include/: engine.hpp  engine.inl  engine_core.hpp  module.hpp  scry.hpp
include/IO/: asset_types.h  manager.hpp  manager.inl  stb_impl.inl  vfs.hpp  vfs.inl
include/IO/threading/: job_system.hpp  job_system.inl
include/OS/: IInput.hpp  IWindow.hpp  keys.hpp  types.h  window_manager.hpp  window_manager.inl
include/OS/glfw/: glfw_impl.inl  glfw_input.hpp  glfw_window.hpp
include/components/: camera.h  spatial.h  transform.h
include/debug/: assert.h  logger.hpp  logger.inl  profiler.hpp
include/ecs/: components.hpp  ecs_allocator.hpp  ecs_types.hpp  registry.hpp  registry.inl
include/engine/: CookedAsset.h  PluginAPI.h  camera.h  camera.hpp  ecs.h  ecs.hpp  engine.h  engine_context.hpp  graphics.h  graphics.hpp  graphics_backend.h  graphics_backend.hpp  input.h  input.hpp  job_system.hpp  json.h  json.hpp  math.h  math.hpp  memory.h  memory.hpp  pipeline.h  pipeline.hpp  platform.h  plugin.h  plugin.hpp  renderer.h  renderer.hpp  spatial.h  threading.h  transform.h  transform.hpp
include/engine/components/: mesh.h  spatial.h  transform.h
include/engine/debug/: debug_draw.h  debug_ui.h  profiler.h
include/engine/renderer/: backend.h  core.h  mesh.h  renderer.h
include/graphics/: IGraphics.hpp  IGraphics.inl  graphics_types.hpp  render_packet.hpp  standard_shaders.hpp
include/intent/: intent_queue.hpp  intent_queue.inl  intent_types.hpp
include/math/: algebra.hpp  calculus.hpp  calculus.inl  geometry.hpp  geometry.inl  interpolation.hpp  interpolation.inl  math.h  pathfinding.hpp  pathfinding.inl  random.hpp  random.inl  trigonometry.hpp
include/memory/: array.hpp  array.inl  block_pool.hpp  block_pool.inl  chained_arena.hpp  chained_arena.inl  handle.hpp  pool_allocator.hpp  pool_allocator.inl  tracked_heap.hpp  tracked_heap.inl
include/module/: module.hpp  system_builder.hpp
include/reflection/: builder.hpp  core_reflection.hpp  core_reflection.inl
include/scry/: ScryEngineAPI.h  core.hpp  scry.h  scry_ecs.hpp  scry_input.hpp  scry_job_system.hpp  scry_json.hpp  scry_math.hpp  scry_memory.hpp  scry_pipeline.hpp  scry_platform.hpp  scry_plugin.hpp
include/serialization/: archive.hpp  meta_serializer.hpp  meta_serializer.inl
include/time/: ITime.hpp  ITime.inl  time_manager.hpp  time_manager.inl
modules/glfw/: CMakeLists.txt
modules/glfw/include/glfw/: glfw_input.hpp
modules/glfw/src/: glfw_impl.cpp
modules/imgui/: CMakeLists.txt
modules/imgui/include/imgui/: imgui_module.hpp
modules/imgui/src/: imgui_module.cpp
modules/profiler/: CMakeLists.txt
modules/profiler/include/profiler/: tracy_module.hpp
modules/profiler/src/: tracy_module.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/include/renderer/: diligent_module.hpp  render_queue.hpp  render_queue.inl
modules/renderer/src/: diligent_allocator.hpp  diligent_module.cpp  diligent_resource_pool.hpp  diligent_thread.cpp
plugins/scry_input_plugin/: CMakeLists.txt  input_plugin.cpp  plugin.json  scry_input_plugin.cpp
plugins/scry_physics_plugin/: CMakeLists.txt  physics_plugin.cpp  plugin.json  scry_physics_plugin.cpp
samples/engine-basic/: CMakeLists.txt  main.cpp
sandbox/: main.cpp
src/: camera.cpp  ecs.c  ecs.cpp  graphics.cpp  graphics_internal.hpp  job_system.cpp  json.c  json.cpp  memory.c  memory.cpp  pipeline.c  pipeline.cpp  platform.c  platform.cpp  plugin.c  plugin.cpp  renderer.cpp  scry.c  scry.cpp  scry_ecs.cpp  scry_job_system.cpp  scry_json.cpp  scry_memory.cpp  scry_pipeline.cpp  scry_platform.cpp  scry_plugin.cpp  spatial.cpp  threading.c  threading.cpp  transform.cpp
src/debug/: debug_ui.cpp
src/renderer/: debug_draw.cpp  graphics_device.cpp  graphics_internal.h  graphics_loader.cpp  graphics_resources.cpp  render_system.cpp  renderer.cpp
src/systems/: camera_system.c  camera_system.cpp  render_system.cpp  spatial_system.c  spatial_system.cpp  transform_system.c  transform_system.cpp
tests/: CMakeLists.txt  main.cpp  test_allocators.cpp  test_array.cpp  test_ecs.cpp  test_engine.cpp  test_main.cpp  test_math.cpp  test_memory.cpp  test_resource.cpp
tools/: cooker.cpp
